<resources>

    <!-- main -->
    <string name="app_name">瘦吧</string>

    <!-- 首页 -->
    <string name="home_main_title">首页</string>
    <string name="weight_history">05-27</string>
    <string name="weight_weight">体重</string>
    <string name="goal_weight">目标体重</string>
    <string name="Need_to_eat">需摄入</string>
    <string name="already_eat">已摄入</string>
    <string name="Need_to_subtract">应减</string>
    <string name="already_subtract">已减</string>
    <string name="The_Last_Record">上次记录</string>
    <string name="record">记录</string>
    <string name="Most_popular">人气最高</string>
    <string name="the_shortest_distance">距离最近</string>
    <string name="locate">太原</string>
    <string name="recommend_today">今天吃什么?</string>
    <string name="recommend">饮食推荐</string>
    <string name="breakfast">早餐</string>
    <string name="lunch">午餐</string>
    <string name="supper">晚餐</string>
    <string name="breakfast_suggest">早餐建议</string>
    <string name="lunch_suggest">午餐建议</string>
    <string name="supper_suggest">晚餐建议</string>
    <string name="breakfast_already_eat">已摄入106k</string>
    <string name="lunch__already_eat">已摄入156k</string>
    <string name="supper__already_eat">已摄入196k</string>
    <string name="test">石蛋，没办法改啥都没做饭发了吗V领方面的这个破时事报告得到的，磨出风口是空洞积分高冬梅到地方，没办法了发哦吧，索拉卡吧女评估师，没法打法改啥都没做饭发了吗V领方面的这个破时事报告得到的，磨出风口是空洞积分高冬梅到地方，没办法了发哦吧，索拉卡吧女评估师，没法打法改啥都没做饭发了吗V领方面的这个破时事报告得到的，磨出风口是空洞积分高冬梅到地方，没办法了发哦吧，索拉卡吧女评估师，没法打法改啥都没做饭发了吗V领方面的这个破时事报告得到的，磨出风口是空洞积分高冬梅到地方，没办法了发哦吧，索拉卡吧女评估师，没法打法改啥都没做饭发了吗V领方面的这个破时事报告得到的，磨出风口是空洞积分高冬梅到地方，没办法了发哦吧，索拉卡吧女评估师，没法打法改啥都没做饭发了吗V领方面的这个破时事报告得到的，磨出风口是空洞积分高冬梅到地方，没办法了发哦吧，索拉卡吧女评估师，没法打</string>

    <!-- 记录 -->
    <string name="weidu">围度</string>
    <string name="period">生理期</string>
    <string name="period_record">记录生理期</string>
    <string name="weight_record">体脂称</string>
    <string name="weidu_record">记录围度</string>
    <string name="food_record">记录饮食</string>
    <string name="workandrest">作息</string>

    <!-- 瘦吧 -->
    <string name="shouba_main_title">瘦吧</string>

    <!-- 商城 -->
    <string name="store_main_title">商城</string>

    <!-- 服务 -->
    <string name="service_main_title">服务</string>
    <string name="to_store_service">到店服务</string>
    <string name="moulding">塑形</string>
    <string name="plaster">药贴</string>
    <string name="shouba_The_official_mall">瘦吧官方商城</string>

    <string name="selectall">全选</string>
    <string name="servicepersonal">服务人员</string>
    <string name="remarks">备注</string>
    <string name="abdomen">腹部</string>
    <string name="arm">胳膊</string>
    <string name="thigh">大腿</string>
    <string name="shank">小腿</string>


    <!-- 我的 -->
    <string name="about">关于</string>
    <string name="Weight_loss_goals">减重目标</string>
    <string name="order">订单</string>
    <string name="setting">设置</string>
    <string name="user_info">个人资料</string>
    <string name="set_personal_data">个人资料设定</string>

    <string name="mine_main_title">我的</string>
    <string name="female">女</string>
    <string name="male">男</string>
    <string name="sex">性别</string>
    <string name="age">出生年</string>
    <string name="livinghabits">生活习惯</string>

    <!-- 登录、注册 -->
    <string name="login">登录</string>
    <string name="userName">手机号</string>
    <string name="passWord">密码</string>
    <string name="forgot_your_password">忘记密码?</string>
    <string name="try_try">试用一下</string>
    <string name="register">注册</string>
    <string name="repeat_password">确认密码</string>
    <string name="register_code">验证码</string>
    <string name="get_register_code">获取验证码</string>
    <string name="height">身高</string>

    <string name="welcomeLogin">欢迎登录瘦吧App</string>
    <string name="welcomeRegister">欢迎注册瘦吧App</string>

    <!-- 个人资料 -->
    <string name="personal_data">个人资料</string>
    <string name="personal_avatar">头像</string>
    <string name="personal_sex">性别</string>
    <string name="personal_height">身高</string>
    <string name="personal_birthday">出生日期</string>
    <string name="personal_init_weight">初始体重</string>
    <string name="personal_goal_weight">目标体重</string>
    <string name="personal_identity">身份</string>
    <string name="personal_address">现居地</string>
    <string name="personal_default_sex">男</string>
    <string name="personal_default_height">177cm</string>
    <string name="personal_default_birthday">1994.1.1</string>
    <string name="personal_default_init_weight">70kg</string>
    <string name="personal_default_goal_weight">50kg</string>
    <string name="personal_default_identity">上班族</string>
    <string name="personal_default_address">太原</string>

    <!-- 订单 -->
    <string name="orders_shop_name">高新店</string>
    <string name="orders_name">订单名称</string>
    <string name="orders_money">￥666.0</string>
    <string name="orders_total">合计：</string>
    <string name="orders_total_money">￥666.0</string>
    <string name="orders_delete">删除</string>
    <string name="orders_share">分享</string>
    <string name="orders_protocols">订单协议</string>
    <string name="orders_detail">订单详情</string>
    <string name="orders_success">交易成功</string>
    <string name="orders_id">订单号：</string>
    <string name="orders_time">创建时间：</string>
    <string name="pay_time">付款时间：</string>
    <string name="success_time">成交时间：</string>
    <string name="contract_info">合同信息</string>
    <string name="contract_notification">客户告知书</string>
    <!-- 消息 -->
    <string name="my_news">我的消息</string>
    <string name="add_weight">涨称</string>
    <string name="myOrder">我的订单</string>

</resources>
