<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_specialtystore_recommend"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="visible"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tabBarSize"
        android:background="@color/white"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radio_topbar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio0_mendian_renqizuigao"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/Most_popular"
                android:textColor="@drawable/selector_text_mendiantuijian_color"
                android:textSize="14sp" />

            <TextView
                android:layout_width="1dp"
                android:drawableLeft="@drawable/line"
                android:layout_height="wrap_content"
                />

            <RadioButton
                android:id="@+id/radio1_mendian_julizuijin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/the_shortest_distance"
                android:textColor="@drawable/selector_text_mendiantuijian_color"
                android:textSize="14sp" />


        </RadioGroup>

        <TextView
            android:layout_width="1dp"
            android:drawableLeft="@drawable/line"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/tv_locate"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:drawableRight="@drawable/ic_arrow_down"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/locate" />
    </LinearLayout>
</LinearLayout>