<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolBarSize"
            android:background="@color/main_color"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="@string/orders_detail" />
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:id="@+id/orders_success"
        android:layout_width="wrap_content"
        android:layout_height="106dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/viewpadding_width"
        android:paddingTop="@dimen/viewpadding_width">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"

            android:src="@drawable/ic_success" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:text="@string/orders_success"
            android:textColor="?attr/dayNightTwoTextColor" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/orders_details"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/viewpadding_width"
        android:paddingTop="@dimen/viewpadding_width">
        <LinearLayout
            android:id="@+id/orders_details_item3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/viewpadding_width"
            android:paddingTop="@dimen/viewpadding_width">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:text="@string/orders_id"
            android:textColor="?attr/dayNightTwoTextColor" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:text="0000000000000"
                android:textColor="?attr/dayNightTwoTextColor" />
    </LinearLayout>
        <LinearLayout
            android:id="@+id/orders_details_item2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/viewpadding_width"
            android:paddingTop="@dimen/viewpadding_width">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:text="@string/orders_time"
                android:textColor="?attr/dayNightTwoTextColor" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:text="2017-05-10    16:20:06"
                android:textColor="?attr/dayNightTwoTextColor" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/orders_details_item1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/viewpadding_width"
            android:paddingTop="@dimen/viewpadding_width">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:text="@string/pay_time"
                android:textColor="?attr/dayNightTwoTextColor" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:text="2017-05-10    16:21:06"
                android:textColor="?attr/dayNightTwoTextColor" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/orders_details_item"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/viewpadding_width"
            android:paddingTop="@dimen/viewpadding_width">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:text="@string/success_time"
                android:textColor="?attr/dayNightTwoTextColor" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:text="2017-05-10    16:22:06"
                android:textColor="?attr/dayNightTwoTextColor" />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/contract_info"
        android:textColor="?attr/dayNightTwoTextColor" />
    <android.support.v7.widget.CardView
        style="@style/news_summary_card_view"
        android:background="@drawable/selector_gray_deepgray"
        app:cardElevation="@dimen/cardview_cardElevation">

        <LinearLayout
            android:id="@+id/avatar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/viewpadding_width"
            android:paddingTop="@dimen/viewpadding_width">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawableRight="@drawable/ic_arrow_to"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:text="@string/contract_notification"
                android:textColor="?attr/dayNightTwoTextColor" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>